# glebchanskiy

./: .gitignore  README.md  pyproject.toml
my_git_term/: config.py  dark.py  gen.py  gen_term.py  light.py  readme.py
