[tool.poetry]
name = "my-git-term"
version = "0.1.0"
description = ""
authors = ["Левков Глеб <kiss-shot-heart-under-blade@yandex.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
github-readme-terminal = "^0.0.3"

[tool.poetry.scripts]
gen_dark = "my_git_term.dark:dark"
gen_light = "my_git_term.light:light"
gen_readme = "my_git_term.readme:gen"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
